ENABLE METRICS ON CLOUDFLARE

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<p hidden>ENABLE METRICS </p>
 <html>
-	<head>
+	<head> 
 		<title>644 FLINT BISHOP QAMER ZAFA GHAFOOR CEO - AFFIDAVITS EVIDENCING CORPORATE FRAUD</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -322,6 +323,7 @@ HOR 6568-1</a> , <a href="https://www.dropbox.com/scl/fi/0twonqzc5sty7wuh56efp/6
 
 	</body>
 </html>
+
 
 
 
